Bug 1469599 - Associate all module scripts in a module graph with DOM elements before execution r=hsivonen